Hot fix. drawing area overlaying sidebar on small screens fixed

--- a/src/index.css
+++ b/src/index.css
@@ -217,6 +217,7 @@ main {
     min-width: 300px;
     max-width: 500px;
     resize: horizontal;
+    z-index: 100;
 }
 
 .sidebar-row:hover {
